--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cake Business</title>
+    <title>SweetBites</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <h1>Sweetbites</h1>
+        <h1>Welcome to SweetBites</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,14 +20,32 @@
         <h2>Our Recent Orders</h2>
         <div class="gallery">
             <img class="gallery-image" src="gallery/cake1-thumbnail.jpg" data-full="gallery/cake1.jpg" alt="Cake 1">
-<img class="gallery-image" src="gallery/cake2-thumbnail.jpg" data-full="gallery/cake2.jpg" alt="Cake 2">
-<img class="gallery-image" src="gallery/cake3-thumbnail.jpg" data-full="gallery/cake3.jpg" alt="Cake 2">
-
-            <!-- Add more images as needed -->
+            <img class="gallery-image" src="gallery/cake2-thumbnail.jpg" data-full="gallery/cake2.jpg" alt="Cake 2">
+            <img class="gallery-image" src="gallery/cake3-thumbnail.jpg" data-full="gallery/cake3.jpg" alt="Cake 3">
+            <img class="gallery-image" src="gallery/cake4-thumbnail.jpg" data-full="gallery/cake4.jpg" alt="Cake 4">
+            <img class="gallery-image" src="gallery/cake5-thumbnail.jpg" data-full="gallery/cake5.jpg" alt="Cake 5">
+            <img class="gallery-image" src="gallery/cake6-thumbnail.jpg" data-full="gallery/cake6.jpg" alt="Cake 6">
+            <img class="gallery-image" src="gallery/cake7-thumbnail.jpg" data-full="gallery/cake7.jpg" alt="Cake 7">
+            <img class="gallery-image" src="gallery/cake8-thumbnail.jpg" data-full="gallery/cake8.jpg" alt="Cake 8">
+            <img class="gallery-image" src="gallery/cake9-thumbnail.jpg" data-full="gallery/cake9.jpg" alt="Cake 9">
+            <img class="gallery-image" src="gallery/cake10-thumbnail.jpg" data-full="gallery/cake10.jpg" alt="Cake 10">
+            <img class="gallery-image" src="gallery/cake11-thumbnail.jpg" data-full="gallery/cake11.jpg" alt="Cake 11">
+            <img class="gallery-image" src="gallery/cake12-thumbnail.jpg" data-full="gallery/cake12.jpg" alt="Cake 12">
+            <img class="gallery-image" src="gallery/cake13-thumbnail.jpg" data-full="gallery/cake13.jpg" alt="Cake 13">
+            <img class="gallery-image" src="gallery/cake14-thumbnail.jpg" data-full="gallery/cake14.jpg" alt="Cake 14">
+            <img class="gallery-image" src="gallery/cake15-thumbnail.jpg" data-full="gallery/cake15.jpg" alt="Cake 15">
+            <img class="gallery-image" src="gallery/cake16-thumbnail.jpg" data-full="gallery/cake16.jpg" alt="Cake 16">
+            <img class="gallery-image" src="gallery/cake17-thumbnail.jpg" data-full="gallery/cake17.jpg" alt="Cake 17">
+            <img class="gallery-image" src="gallery/cake18-thumbnail.jpg" data-full="gallery/cake18.jpg" alt="Cake 18">
+            <img class="gallery-image" src="gallery/cake19-thumbnail.jpg" data-full="gallery/cake19.jpg" alt="Cake 19">
+            <img class="gallery-image" src="gallery/cake20-thumbnail.jpg" data-full="gallery/cake20.jpg" alt="Cake 20">
         </div>
     </main>
     <footer>
-        <p>&copy; 2024 Sweetbites. All rights reserved.</p>
+        <p>&copy; 2024 SweetBites. All rights reserved.</p>
+        <div class="chat-box">
+            <a href="https://wa.me/2482502284" class="whatsapp-link">Chat with us</a>
+        </div>
     </footer>
     <div id="lightbox" class="lightbox">
         <span class="lightbox-close">&times;</span>
