--- a/menu.html
+++ b/menu.html
@@ -21,20 +21,23 @@
             <h3>Chocolate Cake</h3>
             <img class="menu-image" src="images/chocolate_cake-thumbnail.jpg" data-full="images/chocolate_cake.jpg" alt="Chocolate Cake">
             <p>Delicious chocolate cake with layers of rich chocolate frosting.</p>
-            <p class="price">$20</p>
-            <a href="https://wa.me/your-whatsapp-number?text=I'd%20like%20to%20order%20the%20Chocolate%20Cake%20from%20SweetBites" class="whatsapp-link">Order via WhatsApp</a>
+            <p class="price">RS 500</p>
+            <a href="https://wa.me/2482502284?text=I'd%20like%20to%20order%20the%20Chocolate%20Cake%20from%20SweetBites" class="whatsapp-link">Order via WhatsApp</a>
         </div>
         <div class="menu-item">
             <h3>Vanilla Cake</h3>
             <img class="menu-image" src="images/vanilla_cake-thumbnail.jpg" data-full="images/vanilla_cake.jpg" alt="Vanilla Cake">
             <p>Classic vanilla cake with a creamy vanilla buttercream frosting.</p>
-            <p class="price">$18</p>
-            <a href="https://wa.me/your-whatsapp-number?text=I'd%20like%20to%20order%20the%20Vanilla%20Cake%20from%20SweetBites" class="whatsapp-link">Order via WhatsApp</a>
+            <p class="price">RS 500</p>
+            <a href="https://wa.me/2482502284?text=I'd%20like%20to%20order%20the%20Vanilla%20Cake%20from%20SweetBites" class="whatsapp-link">Order via WhatsApp</a>
         </div>
         <!-- Add more menu items as needed -->
     </main>
     <footer>
         <p>&copy; 2024 SweetBites. All rights reserved.</p>
+        <div class="chat-box">
+            <a href="https://wa.me/2482502284" class="whatsapp-link">Chat with us</a>
+        </div>
     </footer>
     <div id="lightbox" class="lightbox">
         <span class="lightbox-close">&times;</span>
